Closed
Bug 385220
Opened 18 years ago
Closed 18 years ago
Sending of message failed alert shows %S instead of hostname
Categories
(Thunderbird :: General, defect)
Thunderbird
General
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: juergenherz, Assigned: mscott)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
826 bytes,
patch
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1.2pre) Gecko/20070111 SeaMonkey/1.1
Build Identifier: Thunderbird version 3.0a1pre (20070620)
In todays nightly (older version I replaced is over half a year old) I noticed that the alert I got upon failure (getting the alert is perfectly valid and not subject matter) said "Sending of message failed
The message could not be sent because connecting to SMTP server %S failed. [...]"
Notice the %S where the hostname used to be.
Reproducible: Always
Steps to Reproduce:
1. Have your SMTP server not available
2. Try sending a message
3. See the alert text.
Actual Results:
It says "The message could not be sent because connecting to SMTP server %S failed."
Expected Results:
E.g. "The message could not be sent because connecting to SMTP server smtp.example.net failed."
Comment 1•18 years ago
|
||
Confirmed on Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a6pre) Gecko/20070621 Thunderbird/3.0a1pre ID:2007062103
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: regression
OS: Windows 2000 → All
Hardware: PC → All
Summary: Alert shows %S instead of hostname → Sending of message failed alert shows %S instead of hostname
Version: unspecified → Trunk
Comment 2•18 years ago
|
||
I've tried to find the regression window and it regressed between 2007-06-03-03 and 2007-06-04-03 nightlies.
Looking at the checkins and affected files in this time it might be patch of bug 382064 to nsMsgSend.cpp, nsMsgComposeAndSend::DoDeliveryExitProcessing().
Scott, could your patch have caused that?
Comment 3•18 years ago
|
||
Ok, I tested a build with and without patch from attachment 267101 [details] [diff] [review] of bug 382064. And the regression is definitely caused by it.
| Assignee | ||
Comment 4•18 years ago
|
||
we were using the wrong string bundle for some of the strings in this file.
Assignee: nobody → mscott
Status: NEW → ASSIGNED
| Assignee | ||
Updated•18 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•